--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ title = "MeetPasser"
 languageCode = "zh-cn"
 paginate = "20" # Number of posts per page
 theme = "mainroad"
-disqusShortname = "" # Enable comments by entering your Disqus shortname
+disqusShortname = "meetpasser-cc" # Enable comments by entering your Disqus shortname
 googleAnalytics = "" # Enable Google Analytics by entering your tracking id
 disableKinds=["RSS"]
 
