--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ languageCode = "zh-cn"
 paginate = "20" # Number of posts per page
 theme = "mainroad"
 disqusShortname = "meetpasser-cc" # Enable comments by entering your Disqus shortname
-googleAnalytics = "" # Enable Google Analytics by entering your tracking id
+googleAnalytics = "UA-117518226-1" # Enable Google Analytics by entering your tracking id
 disableKinds=["RSS"]
 
 [Author]
