--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,8 @@ theme = "mainroad"
 disqusShortname = "meetpasser-cc" # Enable comments by entering your Disqus shortname
 googleAnalytics = "UA-117518226-1" # Enable Google Analytics by entering your tracking id
 disableKinds=["RSS"]
+enableRobotsTXT=true
+
 
 [Author]
     name = "Passer"
